# rpglang

./: .gitignore  .gitlab-ci.yml  ALIGN_PLAN.md  CALL_LINKAGE_PLAN.md  CMakeLists.txt  KEYBORD_PLAN.md  MISC_OPCODES_PLAN.md  README.md  TOOLS_IDEAS.md  WRKSTN_PLAN.md  prompt.txt
.github/workflows/: pages.yml
analyze/: CMakeLists.txt
analyze/src/: finding.cpp  finding.h  ir.cpp  ir.h  json.cpp  json.h  main.cpp  module.h  registry.cpp  render_html.cpp  render_html.h  render_json.cpp  render_json.h  render_text.cpp  render_text.h  report.cpp  report.h  util.h
analyze/src/cmds/: callgraph.cpp  cmds.h  decode.cpp  diff.cpp  docgen.cpp  duplicate.cpp  format.cpp  migrate.cpp  portfolio.cpp  search.cpp
analyze/src/modules/: buffer.cpp  comments.cpp  compat.cpp  complexity.cpp  condlogic.cpp  controlflow.cpp  cycle.cpp  dataflow.cpp  deadcode.cpp  deps.cpp  fields.cpp  files.cpp  indicators.cpp  modules.h  recordmap.cpp  security.cpp  smells.cpp  subroutines.cpp  summary.cpp  termination.cpp  xref.cpp
clean/: CMakeLists.txt
clean/src/: main.cpp
compiler/: CMakeLists.txt
compiler/src/: autoreport.cpp  autoreport.h  clean.cpp  clean.h  codegen.cpp  codegen.h  cspec.cpp  cspec.h  diagnostics.cpp  diagnostics.h  driver.cpp  driver.h  dspec.cpp  dspec.h  espec.cpp  espec.h  fspec.cpp  fspec.h  hspec.cpp  hspec.h  ispec.cpp  ispec.h  main.cpp  ospec.cpp  ospec.h  program.h  source.cpp  source.h  sspec.cpp  sspec.h  symbols.cpp  symbols.h  uspec.cpp  uspec.h
debian/: changelog  control  copyright  rules
docs/: ARCHITECTURE.md  AUTO_REPORT_PLAN.md  BUILDING.md  SPEC_MAP.md  TODO.md
docs/man/: rpg-analyze.1  rpg-clean.1  rpgc.1
docs/tutorial/: 01-introduction.html  02-source-layout.html  03-program-cycle.html  04-indicators.html  05-data-fields.html  06-arithmetic.html  07-file-specs.html  08-input-specs.html  09-calc-specs.html  10-conditional-logic.html  11-loops-branching.html  12-subroutines.html  13-field-operations.html  14-control-levels.html  15-arrays-tables.html  16-output-specs.html  17-output-formatting.html  18-file-access.html  19-multifile.html  20-control-and-auto-report.html  appendix-cheat-sheet.html  index.html
editors/: README.md
editors/emacs/: rpg2-mode.el
editors/jetbrains/: README.md  rpg2.bnf  rpg2.flex  rpg2_colors.xml
editors/kate/: rpg2.xml
editors/notepad-plus-plus/: rpg2.xml
editors/sublime/: RPG II.sublime-syntax
editors/vim/ftdetect/: rpg2.vim
editors/vim/ftplugin/: rpg2.vim
editors/vim/plugin/: rpg2.vim
editors/vim/syntax/: rpg2.vim
editors/vscode/: language-configuration.json  package.json
editors/vscode/syntaxes/: rpg2.tmLanguage.json
runtime/: CMakeLists.txt  rpg_ext_subr.h  rpg_runtime.c  rpg_runtime.h
tests/: ANDOR  BDATA  BMAST  BREP  BTX  CCFD  CDATA  CONDOUT  DATA  DNOUT  EOUT  FETOUT  FLDATA  GOUT  HOUT  MDPRIM  MRPRIM  MRSEC  PPDATA  QOUT  RIDATA  RPDATA  SOUT  SRFILE  TRANS  WSFORM.dspf  addrec.rpg  altarr.rpg  array.rpg  array2.rpg  big.rpg  biton.rpg  cas.rpg  ccomp.rpg  chain.rpg  charfld.rpg  charfld2.rpg  comp.rpg  cond.rpg  cond_input.rpg  (+102 more)
tests/autoreport/: c1_column_headings_multiline.expected  c1_column_headings_multiline.rpg  c1_detail_only.expected  c1_detail_only.rpg  c1_edit_code_default_k.expected  c1_edit_code_default_k.rpg  c2_accumulator_two_levels.expected  c2_accumulator_two_levels.rpg  c2_group_printing_t_auto.expected  c2_group_printing_t_auto.rpg  c2_name_collision.rpg  c2_no_control_levels.expected  c2_no_control_levels.rpg  c2_six_char_field.expected  c2_six_char_field.rpg  c3_asterisk_depth.expected  c3_asterisk_depth.rpg  c3_final_totals_const.expected  c3_final_totals_const.rpg  c3_suppress_asterisks.expected  c3_suppress_asterisks.rpg  c3_total_lines.expected  c3_total_lines.rpg  c4_mixed_handcoded_and_auto.expected  c4_mixed_handcoded_and_auto.rpg  c4_sort_alternate_mode.expected  c4_sort_alternate_mode.rpg  c4_sort_default.rpg  full_example.expected  full_example.rpg  full_example_equiv.rpg  heading_basic.expected  heading_basic.rpg  heading_date_suppressed.expected  heading_date_suppressed.rpg  heading_field_n1p.expected  heading_field_n1p.rpg  heading_multi_line.expected  heading_multi_line.rpg  heading_reserved_no_n1p.expected  (+4 more)
tests/clean/: CMakeLists.txt  test_clean.cpp
tools/: align_codeblocks.py  build-cpack-deb.sh  build-deb.sh  build-docs.py
